webcleaner (0.22) unstable; urgency=low

  * implemented header logging
  * print HTML parser errors to stderr
  * fixed broken header parsing
  * propagate Python exceptions in the HTML parser
  * encode UTF-8 chars to HTML in the HTML parser
  * misc cleanups and corrections for the release
  * add stubs for the wcheaders tool

 -- Bastian Kleineidam <calvin@debian.org>  Tue,  6 Nov 2001 11:55:25 +0100

webcleaner (0.21) unstable; urgency=low

  * fix AssertionError in ServerPool: dont unregister servers twice
  * add webcleaner.conf manpage

 -- Bastian Kleineidam <calvin@debian.org>  Sat,  3 Nov 2001 00:39:26 +0100

webcleaner (0.20) unstable; urgency=low

  * documentation updates
  * removed debian/conffile and debian/webcleanerconf.dirs
  * use Python2.1 in Debian scripts
  * new HTML parser based on libxml2
  * add bzip encoding for .bz2 files

 -- Bastian Kleineidam <calvin@debian.org>  Thu,  1 Nov 2001 20:12:26 +0100

webcleaner (0.19) unstable; urgency=low

  * htmlop.l:
    use my own strncasecmp function
    force 8bit option in lexer
  * correct use of logfiles in Debian init.d script
  * minor code cleanups
  * help for french output in .bat files
  * added webcleanerconf.bat

 -- Bastian Kleineidam <calvin@debian.org>  Mon, 22 Oct 2001 11:21:12 +0200

webcleaner (0.18) unstable; urgency=low

  * fixes for debian install scripts
  * flush logfile when logging
  * fix log format
  * norm config_dir path in configdata for platform independency
  * HTML parser:
    require Python >= 2.0
    add support for XML declaration tags <?...?>
    better parsing of <script> tags without inside comments
    better <!...> parsing
  * search for TEMP dir under Windows when generating daemon .pid file
  * fix error handling: pass the traceback object
  * only gunzip certain MIME types, not all (for example .tar.gz files)
  * resorted the README, it somehow got overridden

 -- Bastian Kleineidam <calvin@debian.org>  Mon, 15 Oct 2001 14:09:28 +0200
